# doc-reading-mcp

./: README.md  pyproject.toml
src/doc_reading_mcp/: doc_convert.py
